fix z-index issue

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -10,6 +10,7 @@
 
 .header {
   position: fixed;
+  z-index: 10000;
   top: 0;
   left: 0;
   height: 70px;
